fixed zoomed-in issues on mobile

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -92,7 +92,7 @@ h1 {
     line-height: 2;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     text-align: center;
-    margin-left: 20px;
+    margin-left: 0px;
     margin-right: 20px;
     color: #777777;
 }
